text update + 'latest' page

--- a/views/tractorDetails.hbs
+++ b/views/tractorDetails.hbs
@@ -19,7 +19,7 @@
         <a href="/tractorSearch">Tractor Search</a>
 
     </div>
-<h2>Tractor Details</h2>
+<h1>Tractor Details</h1>
 <div>
 
 
@@ -37,7 +37,8 @@
     </div>
     {{/tractorData}}
 {{else}}
-    <h4>no results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h4>
+<h3>Enter a search term to get more details.</h3>
+    <h3>No results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h3>
 {{/if}}
 
 
