--- a/views/tractorSearch.hbs
+++ b/views/tractorSearch.hbs
@@ -19,7 +19,7 @@
         <a href="/tractorSearch">Tractor Search</a>
 
     </div>
-<h2>Tractor Search</h2>
+<h1>Tractor Search</h1>
 <div>
 
 
@@ -34,7 +34,8 @@
     </div>
     {{/tractorData}}
 {{else}}
-    <h4>no results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h4>
+    <h3>Enter a search term to get more details.</h3>
+    <h3>No results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h3>
 {{/if}}
 
 
