--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,21 @@
+
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #2f2f2f;
+  color: white;
 }
 
 a {
   color: #00B7FF;
 }
 
-body {
-  background-color: #2f2f2f;
-  color: white;
+img {
+  width: 100%;
+  max-width: 500px;
 }
+
 
 .header{
   position: fixed;
