--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,11 +23,14 @@
 
 <br/>
 
-<div>
-  <div style="position:relative;padding-top:56.25%;">
-    <iframe src="/latest" frameborder="0" allowfullscreen
-      style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1;"></iframe>
-  </div>
+<div class="listing">
+    <h3 style="text-decoration: underline">Newest Listing</h3>
+    <h4>JD 2020 - Like New</h4>
+    <h4>$40,000</h4>
+    <h4>Like new John Deer. Used for 2 years but looks brand new. <a target='_blank' href='https://www.youtube.com/watch?v=z2_TLz9TpwY'>DOOM supported</a>.</h4>
+    <img src="/JD-realistic-1.jpg" width="500" />
+    <h4>Notes: Makes a ticking sound that should be looked at. Sold as is.</h4>
+    <h4>VIN: TRACP0K99DR122370</h4>
 </div>
 
     
