updating text to reference a database as a minor clue

--- a/views/tractorDetails.hbs
+++ b/views/tractorDetails.hbs
@@ -37,7 +37,7 @@
     </div>
     {{/tractorData}}
 {{else}}
-<h3>Enter a search term to get more details.</h3>
+<h3>Search our database for tractor listings.</h3>
     <h3>No results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h3>
 {{/if}}
 
