adding text input placeholder in search to prompt for VIN

--- a/views/tractorSearch.hbs
+++ b/views/tractorSearch.hbs
@@ -47,8 +47,8 @@
 
 
 <form action="/tractorSearch" method="get" class="search">
-<input type="text" name="vin" id="vin">
-<button type="submit">Search</button>
+<input type="text" name="vin" id="vin" placeholder="Tractor VIN">
+<button type="submit" >Search</button>
 </form>
 
     
