--- a/views/tractorDetails.hbs
+++ b/views/tractorDetails.hbs
@@ -50,8 +50,8 @@
 
 
 <form action="/tractorDetails" method="get" class="search">
-<input type="text" name="vin" id="vin">
-<button type="submit">Search</button>
+<input type="text" name="vin" id="vin" placeholder="Tractor VIN">
+<button type="submit" >Search</button>
 </form>
 
     
