swap menu arrangement to maybe make things easier

--- a/views/tractorSearch.hbs
+++ b/views/tractorSearch.hbs
@@ -15,8 +15,8 @@
 
     <div class="header">
         <a href="/">Home</a>
-        <a href="/tractorDetails">Tractor Details</a>
         <a href="/tractorSearch">Tractor Search</a>
+        <a href="/tractorDetails">Tractor Details</a>
 
     </div>
 <h1>Tractor Search</h1>
@@ -34,7 +34,7 @@
     </div>
     {{/tractorData}}
 {{else}}
-    <h3>Search our database for tractor listings.</h3>
+    <h3>Search our secure database for tractor listings.</h3>
     <h3>No results for " <div style="font-size: 1.5em; color:#ff9696; display: initial;">{{{search}}}</div> "</h3>
 {{/if}}
 
