adding hint comment

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,6 +33,7 @@
     <h4>VIN: TRACP0K99DR122370</h4>
 </div>
 
+<!-- check out this error to fix it https://trac-list.thismaybedown.online/tractorSearch?vin=%27 -->
     
 </body>
 </html>
