--- a/views/tractorSearch.hbs
+++ b/views/tractorSearch.hbs
@@ -45,7 +45,7 @@
 </div>
 
 
-
+<!-- check out this error to fix it https://trac-list.thismaybedown.online/tractorSearch?vin=%27 -->
 <form action="/tractorSearch" method="get" class="search">
 <input type="text" name="vin" id="vin" placeholder="Tractor VIN">
 <button type="submit" >Search</button>
